# DataNarrate

./: .env.example  .gitignore  ARCHITECTURE.md  DataNarrateWindow.meta.json  DataNarrateWindow.tsx  FEATURES_GUIDE.md  README.md  datanarrate_server.py  description.txt  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
tests/: test_datanarrate_server.py
